@startuml

title __DATA's Class Diagram__\n

  namespace Fragmentuse {
    namespace disease.data {
      class Fragmentuse.disease.data.CHDFragment {
          + onCreateView()
      }
    }
  }
  

  namespace Fragmentuse {
    namespace disease.data {
      class Fragmentuse.disease.data.DMFragment {
          ~ iv_princeple_dm : ImageView
          ~ iv_synopsis_dm : ImageView
          ~ ll_princeple_dm : LinearLayout
          ~ ll_synopsis_dm : LinearLayout
          ~ tv_princeple_dm : TextView
          ~ tv_synopsis_dm : TextView
          - flag : int
          - flag_princeple : int
          + onClick()
          + onCreateView()
      }
    }
  }
  

  namespace Fragmentuse {
    namespace disease.data {
      class Fragmentuse.disease.data.HBPFragment {
          + onCreateView()
      }
    }
  }
  

  namespace Fragmentuse {
    namespace disease.data {
      class Fragmentuse.disease.data.RAFragment {
          + onCreateView()
      }
    }
  }
  

  namespace Fragmentuse {
    namespace disease.data {
      class Fragmentuse.disease.data.StrokeFragment {
          + onCreateView()
      }
    }
  }
  

  Fragmentuse.disease.data.CHDFragment -up-|> androidx.fragment.app.Fragment
  Fragmentuse.disease.data.DMFragment -up-|> androidx.fragment.app.Fragment
  Fragmentuse.disease.data.HBPFragment -up-|> androidx.fragment.app.Fragment
  Fragmentuse.disease.data.RAFragment -up-|> androidx.fragment.app.Fragment
  Fragmentuse.disease.data.StrokeFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
